List the r-universe approach

--- a/README.qmd
+++ b/README.qmd
@@ -47,6 +47,9 @@ This repository is part of a series exploring three different approaches:
     provides a transparent view of the deployed content. Explore this repository
     to understand how this approach can streamline your R package deployment workflow.
 
+Another approach would be to use [r-universe.dev](https://ropensci.org/blog/2023/11/17/runiverse-wasm/)
+to automatically build and supply R WASM package binaries.
+
 ## Key Contents
 
 Here's a quick summary of what you can find in the repository:
